# Artificial_Inteligence-2023-1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  board.py  helpful.py  heuristics.py  main.cpp  main.py  results_ia.txt  run.bash  saida.txt
include/: AStar.hpp  BFS.hpp  Backtracking.hpp  Board.hpp  DFS.hpp  Greedy.hpp  GreedyFirst.hpp  IDAStar.hpp  PuzzleNode_stars.hpp  UniformCost.hpp  includes.hpp
instances/: IA_draw.drawio  dumb.txt
instances/8puzzle_solver_intances_denizco/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt
instances/dificeis/: 15puzzle.txt  24puzzle.txt  35puzzle.txt
instances/faceis/: 15puzzle.txt  15puzzle_2.txt  24puzzle.txt  35puzzle.txt  8puzzle.txt  8puzzle_2.txt  8puzzle_3.txt  dumb.txt
source/: AStar.cpp  BFS.cpp  Backtracking.cpp  Board.cpp  DFS.cpp  Greedy.cpp  GreedyFirst.cpp  IDAStar.cpp  UniformCost.cpp
